    - Please DO NOT UPLOAD this to unstable until sarge has been released.
      Use the sarge branch.
    - Use chrp 2.4 kernel on all powerpc chrp* subarchitectures, even
      chrp-rs6k. The chrp-rs6k 2.4 kernel is to be removed.
    - Fix arch_get_kernel output on s390, and explicitly disallow -s390-tape
      and -s390x (documenting why).

 -- Frans Pop <aragorn@tiscali.nl>  Wed,  1 Dec 2004 14:53:07 +0100

base-installer (1.13) unstable; urgency=low

  * Bdale Garbee
    - fix up hppa clause in postinst to get kernel package name right for 2.6
  * Colin Watson
    - Install 2.4.27 apus kernels.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Russian (ru.po) by Yuri Kozlov
    - Slovenian (sl.po) by Jure Čuhalev
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Oct 2004 18:23:34 +0100

base-installer (1.12) unstable; urgency=low

  * Frans Pop
    - Do not append '-speakup' to kernel version when setting
      trykernel for speakup. Closes: #275075

 -- Joey Hess <joeyh@debian.org>  Fri,  8 Oct 2004 19:52:41 -0400

base-installer (1.11) unstable; urgency=low

  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Hebrew (he.po) by Lior Kaplan
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 15:49:43 -0400

base-installer (1.10) unstable; urgency=low

  * Thiemo Seufer
    - Don't hardcode the kernel version for r5k-ip32 to 2.6.
    - Use more generic 2.6 kernel package versioning for mips/mipsel.
  * Joey Hess
    - Look for /proc/speakup on i386 and if a speakup kernel is running,
      try to install a speakup kernel image. Closes: #275075

 -- Joey Hess <joeyh@debian.org>  Tue,  5 Oct 2004 17:00:46 -0400
