@@ -1,0 +1,7 @@
+subarch sb1-swarm-bn
+cpuinfo swarm.cpuinfo
+majors 2.4
+flavour sb1-swarm-bn
+kernel-2.4 2.4.27-sb1-swarm-bn
+usable 2.4.27-sb1-swarm-bn
+unusable 2.4.27-r3k-kn02 2.4.27-r4k-kn04 2.4.27-r5k-lasat 2.4.27-xxs1500 2.4.27-r5k-cobalt
