@@ -20,6 +20,8 @@ base-installer (1.14) UNRELEASED; urgency=low
       chrp-rs6k. The chrp-rs6k 2.4 kernel is to be removed.
     - Fix arch_get_kernel output on s390, and explicitly disallow -s390-tape
       and -s390x (documenting why).
+  * Martin Michlmayr
+    - Add tests for various mips and mipsel subarchitectures.
 
  -- Frans Pop <aragorn@tiscali.nl>  Wed,  1 Dec 2004 14:53:07 +0100
 
